--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mdnm/react-hashtag": "^3.0.2",
     "axios": "^0.26.1",
     "env-cmd": "^10.1.0",
     "react": "^17.0.2",
