--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "env-cmd": "^10.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-icons": "^4.3.1",
     "react-scripts": "^4.0.3",
     "react-toastify": "^8.2.0",
     "styled-components": "^5.3.3"
   },
   "scripts": {
-    "start": "env-cmd -f ./.env react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
