--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "^4.0.3",
     "react-toastify": "^8.2.0",
     "styled-components": "^5.3.3",
-    "sweetalert2": "^11.4.7"
+    "sweetalert2": "^11.4.7",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
