--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^4.0.3",
     "react-toastify": "^8.2.0",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.4.7",
     "uuid": "^8.3.2"
