--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.4.7",
+    "use-interval": "^1.4.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
