--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-infinite-scroller": "^1.2.5",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^4.0.3",
